# psnr

./: CHANGELOG.md  README.md  flake.nix  psnr.cabal
app/: Main.hs
assets/: sample.txt
dist-newstyle/cache/: compiler  config  elaborated-plan  improved-plan  plan.json  solver-plan  source-hashes  up-to-date
