cabal-version:      3.0
name:               psnr
version:            0.1.0.0
-- synopsis:
-- description:
license:            BSD-3-Clause
license-file:       LICENSE
author:             RahulNavneeth
maintainer:         rahulmnavneeth@gmail.com
-- copyright:
category:           Testing
build-type:         Simple
extra-doc-files:    CHANGELOG.md
-- extra-source-files:

common warnings
    ghc-options: -Wall

executable psnr
    import:           warnings
    main-is:          Main.hs
    -- other-modules:
    -- other-extensions:
    build-depends:    base >= 4.18 && < 4.21,
					  vector,
					  bytestring,
					  zlib,
					  JuicyPixels,
    pkgconfig-depends: zlib
    hs-source-dirs:   app
    default-language: Haskell2010
